Build fixes Commented out scss rgb colour styles fro now (Will ifx later) Added required files (static_data.json) Added createlobbyist link to home page

--- a/WebApplication4/ClientApp/src/app/modules/Dashboard/candidatedashboard/candidatedashboard.component.scss
+++ b/WebApplication4/ClientApp/src/app/modules/Dashboard/candidatedashboard/candidatedashboard.component.scss
@@ -18,17 +18,17 @@ li {
   height: 135px;
   width: 30%;
   border-radius: 3px;
-  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  // box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
 }
 
 .material-icons {
   transform: translate(10px, 5px);
 }
 .uploadclss {
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
   float: right;
   border-radius: 5px;
-  border: 2px solid rgb(15 85 151);
+  // border: 2px solid rgb(15 85 151);
   position: absolute;
   right: 1%;
   top: 1%;
@@ -43,7 +43,7 @@ li {
   bottom: 0;
   font-size: 20px;
   padding: 10px 20px;
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
   // padding-left: 33%;
   // padding-left: 50px;
   //   padding-top: 50px;
@@ -80,7 +80,7 @@ li {
 .footerrender {
   margin-right: 15px;
   width: 100%;
-  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  // box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
 }
 
 .title {
