--- a/WebApplication4/ClientApp/src/app/modules/Dashboard/lobbydashboard/lobbydashboard.component.scss
+++ b/WebApplication4/ClientApp/src/app/modules/Dashboard/lobbydashboard/lobbydashboard.component.scss
@@ -8,10 +8,10 @@
 }
 
 .uploadclss {
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
   float: right;
   border-radius: 5px;
-  border: 2px solid rgb(15 85 151);
+  // border: 2px solid rgb(15 85 151);
   position: absolute;
   right: 1%;
   top: 1%;
