--- a/WebApplication4/ClientApp/src/app/modules/Lobbyist/create-account-lobbyist/create-account-lobbyist.component.scss
+++ b/WebApplication4/ClientApp/src/app/modules/Lobbyist/create-account-lobbyist/create-account-lobbyist.component.scss
@@ -74,7 +74,7 @@
     font-weight: 600 !important;
   }
   .cnfrm-screen{
-    box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+    // box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
     border-radius: 4px;
     padding: 2rem 2rem;
     left: 0;
