--- a/WebApplication4/ClientApp/src/app/shared/components/home-layout/home-layout.component.scss
+++ b/WebApplication4/ClientApp/src/app/shared/components/home-layout/home-layout.component.scss
@@ -27,7 +27,7 @@
   height: 100%;
   width: 300px;
   border-left: 1px solid #ebebeb;
-  box-shadow: 0 1px 6px 0 rgba(119, 119, 119, 0.28);
+  // box-shadow: 0 1px 6px 0 rgba(119, 119, 119, 0.28);
   padding: 40px 15px 5px 10px;
   display: inline-block;
   top: 9%;
@@ -86,13 +86,13 @@
 }
 
 .msgfont {
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
   font-size: 25px;
 }
 
 .sidenavestyle {
   margin-top: 40%;
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
 }
 
 .sidanavleft {
