--- a/WebApplication4/ClientApp/src/app/shared/components/messagecomponent/messagecomponent.component.scss
+++ b/WebApplication4/ClientApp/src/app/shared/components/messagecomponent/messagecomponent.component.scss
@@ -18,13 +18,13 @@
 }
 
 .msgfont {
-    color: rgb(15 85 151);
+    // color: rgb(15 85 151);
     font-size: 25px
 }
 
 .heading {
     font-size: 14px;
-    color: rgba(0, 0, 0, 0.794);
+    // color: rgba(0, 0, 0, 0.794);
     font-weight : bold;
     margin: 0px;
 }
