--- a/WebApplication4/ClientApp/src/app/shared/components/modify/modify.component.scss
+++ b/WebApplication4/ClientApp/src/app/shared/components/modify/modify.component.scss
@@ -1,7 +1,7 @@
 .uploadclss {
     color: #073d6e;
     float: left;
-    border: 2px solid rgb(15 85 151);
+    // border: 2px solid rgb(15 85 151);
     padding: 8px 40px;
     font-weight: 600;
     background: transparent;
