--- a/WebApplication4/ClientApp/src/app/shared/components/navigatescreen/navigatescreen.component.scss
+++ b/WebApplication4/ClientApp/src/app/shared/components/navigatescreen/navigatescreen.component.scss
@@ -1,5 +1,5 @@
 .fontcolor {
-    color: rgb(15 85 151);
+    // color: rgb(15 85 151);
   }
   
   .fontcolorblck {
@@ -27,17 +27,17 @@
     height: 135px;
     width: 30%;
     border-radius: 3px;
-    box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+    // box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
   }
   
   .material-icons{
       transform: translate(10px, 5px);
   } 
    .uploadclss{
-    color: rgb(15 85 151);
+    // color: rgb(15 85 151);
     float: right;
     border-radius: 5px;
-    border: 2px solid rgb(15 85 151);
+    // border: 2px solid rgb(15 85 151);
     position: absolute;
     right: 1%;
     top: 1%
@@ -52,7 +52,7 @@
     bottom: 0;
     font-size:20px; 
     padding: 10px 20px;
-    color: rgb(15 85 151);
+    // color: rgb(15 85 151);
     // padding-left: 33%;
     // padding-left: 50px;
     //   padding-top: 50px;
@@ -87,5 +87,5 @@
    .footerrender {
     margin-right: 15px; 
     width: 100%; 
-    box-shadow:  0 3px 6px rgb(0 0 0 / 16%);
+    // box-shadow:  0 3px 6px rgb(0 0 0 / 16%);
    }
