--- a/WebApplication4/ClientApp/src/app/shared/sidenavcomponent/sidenavcomponent.component.scss
+++ b/WebApplication4/ClientApp/src/app/shared/sidenavcomponent/sidenavcomponent.component.scss
@@ -46,13 +46,13 @@
 }
 
 .msgfont {
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
   font-size: 25px;
 }
 
 .sidenavestyle {
   margin-top: 40%;
-  color: rgb(15 85 151);
+  // color: rgb(15 85 151);
 }
 
 .sidanavleft {
