--- a/WebApplication4/ClientApp/src/app/modules/auth/create-account/create-account.component.scss
+++ b/WebApplication4/ClientApp/src/app/modules/auth/create-account/create-account.component.scss
@@ -152,7 +152,7 @@
   opacity: 1;
 }
 .cnfrm-screen{
-  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  // box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
   border-radius: 4px;
   padding: 2rem 2rem;
   width: 33%;
