--- a/WebApplication4/ClientApp/src/app/shared/components/summarycomponent/summarycomponent.component.scss
+++ b/WebApplication4/ClientApp/src/app/shared/components/summarycomponent/summarycomponent.component.scss
@@ -7,7 +7,7 @@
     bottom: 0;
     font-size:20px; 
     padding: 10px 20px;
-    color: rgb(15 85 151);
+    // color: rgb(15 85 151);
     // padding-left: 33%;
     // padding-left: 50px;
     //   padding-top: 50px;
@@ -37,5 +37,5 @@
    .footerrender {
     margin-right: 15px; 
     width: 100%; 
-    box-shadow:  0 3px 6px rgb(0 0 0 / 16%);
+    // box-shadow:  0 3px 6px rgb(0 0 0 / 16%);
    }
