--- a/WebApplication4/ClientApp/src/styles.css
+++ b/WebApplication4/ClientApp/src/styles.css
@@ -1,16 +1,611 @@
 /* You can add global styles to this file, and also import other style files */
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+body {
+  background: #fff;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif !important;
+  color: #58595b;
 }
 
-code {
-  color: #e01a76;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+label,
+span {
+  padding: 0;
+  margin: 0;
+}
+
+table {
+  width: 100%;
+}
+
+.width-100 {
+  width: 100%;
+  display: inline-table;
+}
+
+.width-90 {
+  width: 90%;
+  display: inline-table;
+}
+
+.width-50 {
+  width: 50%;
+  display: inline-table;
+}
+
+.width-65 {
+  width: 65%;
+  display: inline-table;
+}
+
+.width-45 {
+  width: 45%;
+  display: inline-table;
+}
+
+.width-30 {
+  width: 30%;
+  display: inline-table;
+}
+
+.width-43 {
+  width: 43%;
+  display: inline-table;
+}
+
+.width-40 {
+  width: 40%;
+  display: inline-table;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-overlaybtn {
+  width: 32px;
+  height: 32px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: transparent;
+  border: 0;
+  position: absolute;
+  right: 10px;
+  top: 21px;
+  transition: 0.2s;
+  outline: none !important;
+  color: #58595b;
+}
+
+.invalid-feedback {
+  color: #b70011 !important;
+  letter-spacing: 0.5px !important;
+  font-family: "Roboto Condensed" !important;
+  font-size: 12px !important;
+  font-weight: 400 !important;
+  border-color: #b70011 !important;
+  margin: 0;
+  line-height: normal;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.center {
+  text-align: center;
+}
+
+.left-align {
+  text-align: left;
+}
+
+.right-align {
+  text-align: right;
+}
+
+.margin-0 {
+  margin: 0;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.margin-bottom-15 {
+  margin-bottom: 15px;
+}
+
+.margin-bottom-25 {
+  margin-bottom: 25px;
+}
+
+.margin-bottom-30 {
+  margin-bottom: 30px;
+}
+
+.margin-bottom-90 {
+  margin-bottom: 90px;
+}
+
+.margin-right-15 {
+  margin-right: 15px;
+}
+
+.margin-right-20 {
+  margin-right: 20px;
+}
+
+.margin-left-20 {
+  margin-left: 20px;
+}
+
+.padding-0 {
+  padding: 0;
+}
+
+.relative {
+  position: relative;
+}
+
+.opacity-6 {
+  opacity: 0.6;
+}
+
+.tittle-grid {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 16px;
+}
+
+.edit-icon {
+  padding: 6px;
+  color: #005596;
+}
+
+.delete-icon {
+  padding: 6px;
+  color: #005596;
+}
+
+.example-full-width {
+  width: 350px;
+}
+
+.mat-width-150 {
+  width: 150px;
+}
+
+.lobbyist-edit-shadow,
+.committee-edit-shadow {
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  border-radius: 4px;
+  width: 351px;
+  padding: 0em 1em;
+}
+
+.confirm-label {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+}
+
+.o-Form__set__input {
+  padding: 0.2em 0.8em;
+  color: grey;
+  border-radius: 4px;
+  background: #f0f0f0;
+  transition: border-bottom-color 0.5s ease;
+  min-height: 30px;
+  border: 0;
+}
+
+.o-Form__set__label {
+  padding-bottom: 0.7em;
+  color: #000;
+  font-family: Semibold;
+  transition: top 0.3s ease;
+}
+
+.o-Form__set {
+  display: flex;
+  flex-flow: column wrap;
+  padding: 0.5em 0;
+  position: relative;
+}
+
+.o-Form__set__input:focus {
+  outline: none;
+  border-bottom: 2px solid #0578bd !important;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+input[type="radio"] {
+  width: 25px;
+  height: 25px;
+  border: 1px solid darkgray;
+  border-radius: 50%;
+  outline: none;
+  margin-right: 10px;
+  -webkit-appearance: none;
+}
+
+.transfrom-radio {
+  transform: translate(0px, 12px);
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.size-14 {
+  font-size: 14px;
+}
+
+.size-16 {
+  font-size: 16px;
+}
+
+.size-19 {
+  font-size: 19px;
+}
+
+.committee-list-grid,
+.lobbyist-list-grid {
+  display: grid;
+  grid-template-columns: 120px 120px;
+}
+
+.color-SkyBlue {
+  color: #0398d6;
+}
+
+.color-BrightBlue {
+  color: #005596;
+}
+
+.color-NavyBlue {
+  color: #002d56;
+}
+
+input[type="radio"]:before {
+  content: "";
+  display: block;
+  width: 60%;
+  height: 60%;
+  margin: 20% auto;
+  border-radius: 50%;
+}
+
+input[type="radio"]:checked:before {
+  background: #58595b;
+}
+
+::ng-deep .mat-form-field-infix {
+  width: 400px !important;
+}
+
+.confirm-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.primary-txt {
+  font-size: 14px;
+  color: rgb(0, 85, 150);
+  font-family: "open sans", sans-serif;
+  font-weight: 600;
+}
+
+.title-h5 {
+  color: #002d56;
+  margin-bottom: 10px;
+}
+
+.create-btn {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.login-btn {
+  margin-bottom: 10px !important;
+  width: 100%;
+  height: 43px;
+  font-size: 16px;
+  background: #005596;
+  font-family: "open sans", sans-serif;
+  font-weight: 400;
+  border: 0px;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+}
+
+.primary-btns {
+  height: 43px;
+  font-size: 16px;
+  background: #0096d6;
+  font-family: "open sans", sans-serif;
+  font-weight: 400;
+  border: 0px;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+}
+
+.primary-btns-white {
+  font-size: 16px;
+  background: #fff;
+  font-family: "open sans", sans-serif;
+  font-weight: 700;
+  border: 0px;
+  color: #0096d6;
+  /* padding: 0.5rem 1rem; */
+  border-radius: 4px;
+}
+
+.mat-form-field-flex {
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 4px 4px 0 0;
+  padding: 0.1em 0.75em 0 !important;
+}
+
+/*Login modules styles start here....*/
+
+.logo {
+  width: 140px;
+  margin: 0 auto 20px;
+  display: block;
+}
+
+.logo img {
+  width: 140px;
+}
+
+.account-modules {
+  width: 35%;
+  margin: 0 auto;
+  height: 95vh;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+}
+
+.regisLobby h2 {
+}
+
+.account-modules h1 {
+  font-size: 22px;
+  color: #005596;
+  font-family: "open sans", sans-serif;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.account-modules h2 {
+  font-size: 25px;
+  /*// color: #005596;*/
+  font-family: "open sans", sans-serif;
+  font-weight: 400;
+  margin-bottom: 5px;
+  align-items: flex-start;
+}
+
+.account-modules p {
+  font-size: 14px;
+  /*font-family: 'open sans', sans-serif;*/
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.instruction-modules p {
+  text-align: left;
+  font-size: 18px;
+  font-family: "open sans", sans-serif;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #005596;
+}
+
+.account-inner-view {
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  border-radius: 4px;
+  padding: 3rem 2rem;
+}
+
+.inner-background-radius {
+  border: 2px solid #005596;
+  border-radius: 25px;
+  background-color: #005596;
+  color: white;
+  padding: 2px;
+}
+
+.detailview-class {
+  text-align: justify;
+}
+
+html,
+body {
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-infix {
+  padding: 0.25em 0 1em 0;
+}
+
+.back-btn {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.bottom-btn {
+  position: fixed;
+  left: 20px;
+  right: 20px;
+  bottom: 0;
+  display: flex;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.mat-flat-button.mat-primary,
+.mat-raised-button.mat-primary,
+.mat-fab.mat-primary,
+.mat-mini-fab.mat-primary {
+  background-color: #0f5597;
+}
+
+.mat-flat-button.mat-primary,
+.mat-raised-button.mat-primary,
+.mat-fab.mat-primary,
+.mat-mini-fab.mat-primary {
+  background-color: #0f5597;
+  border-radius: 0px;
+}
+
+.mat-flat-button {
+  border-radius: 0px !important;
+}
+
+/*// .mat-drawer-content {
+  // overflow: hidden !important;
+  //
+}
+*/
+.visuallyhidden {
+  display: none;
+}
+
+.mat-tab-body-content {
+  height: 100%;
+  overflow: hidden !important;
+}
+
+.error-class {
+  margin-top: -4%;
+  color: #f44336;
+  font-size: 75%;
+  margin-left: 3%;
+}
+
+.profile-content {
+  position: absolute;
+  width: 200px;
+  background: white;
+  border-radius: 4px;
+  box-shadow: 0px 6px 16px #00000080;
+  right: 28px;
+  top: 52px;
+  display: inline-block;
+  z-index: 50;
+}
+
+.font-400 {
+  font-weight: 400 !important;
+}
+
+.font-600 {
+  font-weight: 600 !important;
+}
+
+.col-sm-3,
+.col-sm-2 {
+  position: relative;
+  top: 12px;
+}
+
+mat-label {
+  color: #005596;
+  width: 30%;
+}
+
+.mat-drawer-side {
+  border-right: solid 2px rgb(203 203 203) !important;
+}
+
+.mat-table thead {
+  background: #f0f0f0;
+}
+
+.mat-header-cell {
+  color: #000000;
+  font-size: 14px;
+}
+
+.managemnet-title {
+  color: #0f5597;
+  font-size: 38px !important;
+  font-weight: 600 !important;
+  margin-bottom: 30px !important;
+  letter-spacing: 1.25px !important;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.mat-drawer-container {
+  background-color: transparent !important;
+}
+
+.mat-form-field-subscript-wrapper {
+  margin-top: 0.2em !important;
+}
+
+.mat-cell,
+.mat-footer-cell {
+  font-size: 15px;
+  letter-spacing: 0.55px;
+}
+
+.mat-header-cell {
+  color: #000000;
+  font-size: 17px;
+}
+
+.goToBack {
+  padding-top: 10px;
+}
+
+.btn {
+  border-radius: 0;
+  padding: 0 40px;
+  font-size: 16px;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+  color: #0f5597;
+}
+
+.btn-secondary {
+  background-color: #0f5597;
+  border: 1px solid #ffffff;
+  color: #ffffff;
 }
