--- a/WebApplication4/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/WebApplication4/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using WebApplication4.Areas.Identity
-@using WebApplication4.Areas.Identity.Pages
+@using Denver.UI.Areas.Identity
+@using Denver.UI.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using WebApplication4.Models
+@using Denver.UI.Models
