--- a/WebApplication4/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebApplication4/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -13,7 +13,7 @@
   </mat-toolbar>
   <!-- <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">WebApplication4</a>
+      <a class="navbar-brand" [routerLink]="['/']">Denver.UI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
         aria-label="Toggle navigation" [attr.aria-expanded]="isExpanded" (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
