--- a/WebApplication4/Pages/Shared/_LoginPartial.cshtml
+++ b/WebApplication4/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using WebApplication4.Models;
+@using Denver.UI.Models;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
