--- a/WebApplication4/Pages/_ViewImports.cshtml
+++ b/WebApplication4/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using WebApplication4
-@namespace WebApplication4.Pages
+@using Denver.UI
+@namespace Denver.UI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
